<resources>
    <string name="app_name" translatable="false">Shizuku</string>
    <string name="translation_contributors" />
    <string name="home_status_service_is_running">%1$s is running</string>
    <string name="home_status_service_not_running">%1$s is not running</string>
    <string name="home_status_service_version">Version %2$s, %1$s</string>
    <string name="home_status_service_version_update"><![CDATA[Version %2$s, %1$s<br>Start again to update to version %3$s]]></string>
    <string name="home_adb_title"><![CDATA[Start by connecting to a computer]]></string>
    <string name="home_adb_description"><![CDATA[For devices without root, you need to use adb to start Shizuku (requires computer connection). This process needs to be repeated every time the device is restarted. Please <b><a href=\"%1$s\">read the help</a></b>.]]></string>
    <string name="home_adb_button_view_help">Read help</string>
    <string name="home_adb_button_view_command">View command</string>
    <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* There are some other considerations, please confirm that you have read the help first.]]></string>
    <string name="home_adb_dialog_view_command_copy_button">Copy</string>
    <string name="home_adb_dialog_view_command_button_send">Send</string>
    <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Shizuku directly from your device, without connecting to a computer.<p>In addition, Shizuku can be started automatically on boot without root if WRITE_SECURE_SETTINGS permission is granted.<p>Please view the step-by-step guide first.]]></string>
    <string name="home_wireless_adb_description_pre_11"><![CDATA[Before Android 11, connecting to a computer is required to enable Wireless debugging.]]></string>
    <string name="home_wireless_adb_view_guide_button">Step-by-step guide</string>
    <string name="dialog_adb_discovery">Searching for wireless debugging service</string>
    <string name="dialog_adb_discovery_message">Please enable \"Wireless debugging\" in \"Developer options\". \"Wireless debugging\" is automatically disabled when network changes.\n\nNote, do not disable \"Developer options\" or \"USB debugging\", or Shizuku will be stopped.</string>
    <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Please try to disable and enable \"Wireless debugging\" if it keeps searching.</string>
    <string name="dialog_adb_port">Port</string>
    <string name="dialog_adb_invalid_port">Port is an integer ranging from 1 to 65535.</string>
    <string name="adb_pairing">Pairing</string>
    <string name="dialog_adb_pairing_title">Pair with device</string>
    <string name="dialog_adb_pairing_discovery">Searching for pairing service</string>
    <string name="dialog_adb_pairing_paring_code">Pairing code</string>
    <string name="paring_code_is_wrong">Pairing code is wrong.</string>
    <string name="cannot_connect_port">Can\'t connect to wireless debugging service.</string>
    <string name="dialog_wireless_adb_not_enabled">Wireless debugging is not enabled.\nNote, before Android 11, to enable wireless debugging, computer connection is a must.</string>
    <string name="dialog_adb_pairing_message">Please start paring by the following steps: \"Developer Options\" - \"Wireless debugging\" - \"Pairing device using pairing code\".\n\nAfter the pairing process starts, you will able to input the pairing code.</string>
    <string name="adb_pairing_requires_multi_window">Please enter split-screen (multi-window) mode first.</string>
    <string name="adb_pairing_requires_multi_window_reason">The system requires the pairing dialog always visible, using split-screen mode is the only way to let this app and system dialog visible at the same time.</string>
    <string name="adb_error_key_store">Unable to generate key for wireless debugging.\nThis may be because KeyStore mechanism of this device is broken.</string>
    <string name="adb_pair_required">Please go through the pairing step first.</string>
    <string name="development_settings">Developer options</string>
    <string name="notification_settings">Notification options</string>
    <string name="adb_pairing_tutorial_title">Pair Shizuku with your device</string>
    <string name="adb_pairing_tutorial_content_notification">A notification from Shizuku will help you complete the pairing.</string>
    <string name="adb_pairing_tutorial_content_steps">Enter \"Developer options\" - \"Wireless debugging\". Tap \"Pair device with pairing code\", you will see a six-digit code.</string>
    <string name="adb_pairing_tutorial_content_enter_pairing_code">Enter the code in the notification to complete pairing.</string>
    <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Shizuku. Please allow Shizuku to post notifications.</string>
    <string name="adb_pairing_tutorial_content_miui">MIUI users may need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
    <string name="adb_pairing_tutorial_content_miui_2">Otherwise, you may not able to enter paring code from the notification.</string>
    <string name="adb_pairing_tutorial_content_left_is_clickable">Please note, left part of the \"Wireless debugging\" option is clickable, tapping it will open a new page. Only turing on the switch on the right is incorrect.</string>
    <string name="adb_pairing_tutorial_content_finish">Back to Shizuku and start Shizuku.</string>
    <string name="adb_pairing_tutorial_content_network">Shizuku needs to access local network. It is controlled by the network permission.</string>
    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Some systems (such as MIUI) disallow apps to access the network when they are not visible, even if the app uses foreground service as standard. Please disable battery optimization features for Shizuku on such systems.</string>
    <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
    <string name="home_root_description"><![CDATA[In addition, Shizuku can be started automatically on boot. If not, please check if your system or third-party tools have restricted Shizuku.<br>You can refer to %s.]]></string>
    <string name="home_root_description_sui"><![CDATA[If you are using Magisk, you can try %1$s. For root users, it will eventually replace Shizuku. Note, existing applications needs to change a little to use %2$s.]]></string>
    <string name="home_root_button_start">Start</string>
    <string name="home_root_button_restart">Restart</string>
    <string name="home_app_management_title">Application management</string>
    <plurals name="home_app_management_authorized_apps_count">
        <item quantity="one"><![CDATA[Authorized %d application]]></item>
        <item quantity="other"><![CDATA[Authorized %d applications]]></item>
    </plurals>
    <string name="home_app_management_view_authorized_apps"><![CDATA[Tap to manage authorized apps]]></string>
    <string name="home_app_management_empty">Apps that has requested or declared Shizuku will show here.</string>
    <string name="home_learn_more_title">Learn Shizuku</string>
    <string name="home_learn_more_description">Learn how to develop with Shizuku</string>
    <string name="home_adb_is_limited_title">You need to take an extra step</string>
    <string name="home_adb_is_limited_description">Your device manufacturer has restricted adb permissions and apps using Shizuku will not work properly.\n\nUsually, this limitation can be lifted by adjusting some options in \"Developer options\". Please read the help for details on how to do this.\n\nYou may need to restart Shizuku for the operation to take effect.</string>
    <string name="app_management_dialog_adb_is_limited_title">The permission of adb is limited</string>
    <string name="app_management_dialog_adb_is_limited_message"><![CDATA[It\'s highly possible that your device manufacturer limits the permission of adb.<p>There may be a solution for your system in <b><a href=\"%1$s\">this document</a></b>.]]></string>
    <string name="app_management_item_summary_requires_root">* requires Shizuku runs with root</string>
    <string name="home_terminal_title">Use Shizuku in terminal apps</string>
    <string name="home_terminal_description">Run commands through Shizuku in terminal apps you like</string>
    <string name="terminal_tutorial_1">First, Export files to any where you want. You will find two files, %1$s and %2$s.</string>
    <string name="terminal_tutorial_1_description">If there are files with the same name in the selected folder, they will be deleted.\n\nThe export function uses SAF (Storage Access Framework). It\'s reported that MIUI breaks the functions of SAF. If you are using MIUI, you may have to extract the file from Shizuku\'s apk or download from GitHub.</string>
    <string name="terminal_export_files">Export files</string>
    <string name="terminal_tutorial_2">Then, use any text editor to open and edit %1$s.</string>
    <string name="terminal_tutorial_2_description">For example, if you want to use Shizuku in %1$s, you should replace %2$s with %3$s (%4$s is the package name of %1$s).</string>
    <string name="terminal_tutorial_3">Finally, move the files to somewhere where your terminal app can access, you will be able to use %1$s to run commands through Shizuku.</string>
    <string name="terminal_tutorial_3_description">Some tips: grant execute permission to %1$s and add it to %2$s, you will able to use %1$s directly.</string>
    <string name="rish_description"><![CDATA[
With %1$s, in any terminal app, you can connect to and interact with the shell runs by Shizuku.
<p>About the detailed usage %1$s, tap to view the document.
    ]]></string>
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_user_interface">Appearance</string>
    <string name="settings_black_night_theme">Black night theme</string>
    <string name="settings_black_night_theme_summary">Use the pure black theme if night mode is enabled</string>
    <string name="settings_startup">Startup (only one of them can be enabled at a time)</string>
    <string name="settings_translation_contributors">Translation contributors</string>
    <string name="settings_translation">Participate in translation</string>
    <string name="settings_translation_summary">Help us translate %s into your language</string>
    <string name="settings_start_on_boot">Start on boot (root)</string>
    <string name="settings_start_on_boot_summary">For rooted devices, Shizuku is able to start automatically on boot</string>
    <string name="settings_use_system_color">Use system theme color</string>
    <string name="settings_start_on_boot_wireless">Start on boot (wireless ADB)</string>
    <string name="settings_start_on_boot_wireless_summary">For rootless devices, Shizuku is able to start automatically on boot</string>
    <string name="enable_wifi_first">Enable Wi-Fi to proceed</string>
    <string name="action_about">About</string>
    <string name="about_view_source_code"><![CDATA[View source code at %s]]></string>
    <string name="action_stop">Stop Shizuku</string>
    <string name="dialog_stop_message">Shizuku service will be stopped.</string>
    <string name="notification_channel_service_status">Service start status</string>
    <string name="permission_warning_template"><![CDATA[Allow <b>%1$s</b> to %2$s?]]></string>
    <string name="grant_dialog_button_allow_always">Allow all the time</string>
    <string name="grant_dialog_button_deny">"Deny"</string>
</resources>