<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?homeCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <moe.shizuku.manager.widget.MaterialCircleIconView
            android:id="@android:id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_wadb_24"
            app:iconColorName="cyan" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/home_wireless_adb_title" />

    </LinearLayout>

    <TextView
        android:id="@android:id/text1"
        style="@style/CardSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/home_adb_description" />

    <TextView
        android:id="@android:id/button3"
        style="@style/CardButton"
        android:drawableStart="@drawable/ic_outline_open_in_new_24"
        android:text="@string/home_wireless_adb_view_guide_button" />

    <TextView
        android:id="@android:id/button2"
        style="@style/CardButton"
        android:drawableStart="@drawable/ic_baseline_link_24"
        android:text="@string/adb_pairing" />

    <TextView
        android:id="@android:id/button1"
        style="@style/CardButton"
        android:drawableStart="@drawable/ic_server_start_24dp"
        android:text="@string/home_root_button_start" />

</LinearLayout>
