<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?homeCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <moe.shizuku.manager.widget.MaterialCircleIconView
            android:id="@android:id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_root_24dp"
            app:iconColorName="orange" />

        <TextView
            android:id="@android:id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_icon_padding"
            android:layout_weight="1"
            android:text="@string/home_root_title" />

    </LinearLayout>

    <TextView
        android:id="@android:id/text1"
        style="@style/CardSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        tools:text="@string/home_root_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@android:id/button1"
        style="@style/CardButton"
        android:enabled="false"
        android:text="@string/home_root_button_start"
        app:icon="@drawable/ic_server_start_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@android:id/button2"
        style="@style/CardButton"
        android:enabled="false"
        android:text="@string/home_root_button_restart"
        android:visibility="gone"
        app:icon="@drawable/ic_server_restart"
        tools:visibility="visible" />

</LinearLayout>
