<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:layout_marginBottom="48dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:overScrollMode="ifContentScrolls"
    android:paddingStart="?android:dialogPreferredPadding"
    android:paddingEnd="?android:dialogPreferredPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_notification" />

            <TextView
                android:id="@+id/miui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_miui"
                android:textColor="?colorWarning"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_steps" />

            <TextView
                android:id="@+id/samsuing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_samsung"
                android:textColor="?colorWarning"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_enter_pairing_code" />

        </LinearLayout>

        <LinearLayout
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:text="@string/adb_pairing_tutorial_content_notification_blocked"
                android:textColor="?colorError" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
