<?xml version="1.0" encoding="utf-8"?>
<rikka.widget.borderview.BorderNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:borderBottomVisibility="never"
    app:borderTopDrawable="@null"
    app:borderTopVisibility="whenTop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="?android:listPreferredItemPaddingStart"
        android:paddingTop="?actionBarSize"
        android:paddingEnd="?android:listPreferredItemPaddingEnd"
        android:paddingBottom="16dp"
        app:fitsSystemWindowsInsets="bottom|top">

        <LinearLayout
            android:id="@android:id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/card_background"
            android:backgroundTint="?appColorPrimary"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:duplicateParentState="true"
            android:elevation="4dp"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal"
            android:outlineAmbientShadowColor="?appColorPrimary"
            android:outlineSpotShadowColor="?appColorPrimary"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_help_outline_24dp"
                android:tint="?android:textColorSecondaryInverse"
                android:tintMode="src_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@android:id/summary"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:textColor="?android:textColorSecondaryInverse"
                    tools:text="@string/rish_description" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:importantForAccessibility="no"
                android:padding="4dp"
                android:src="@drawable/ic_numeric_1_circle_outline_24"
                android:tint="?android:textColorSecondary"
                android:tintMode="src_in" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/terminal_tutorial_1" />

                <TextView
                    android:id="@+id/summary1"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/terminal_tutorial_1_description"
                    android:textColor="?android:textColorSecondary" />

                <Button
                    android:id="@android:id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/terminal_export_files"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:importantForAccessibility="no"
                android:padding="4dp"
                android:src="@drawable/ic_numeric_2_circle_outline_24"
                android:tint="?android:textColorSecondary"
                android:tintMode="src_in" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text2"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/terminal_tutorial_2" />

                <TextView
                    android:id="@+id/summary2"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:textColor="?android:textColorSecondary"
                    tools:text="@string/terminal_tutorial_2_description" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:importantForAccessibility="no"
                android:padding="4dp"
                android:src="@drawable/ic_numeric_3_circle_outline_24"
                android:tint="?android:textColorSecondary"
                android:tintMode="src_in" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text3"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/terminal_tutorial_3" />

                <TextView
                    android:id="@+id/summary3"
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:textColor="?android:textColorSecondary"
                    tools:text="@string/terminal_tutorial_3_description" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</rikka.widget.borderview.BorderNestedScrollView>
